# webrogue-runtime.github.io

./: .gitignore  .gitmodules  CMakeLists.txt  Gemfile  LICENSE  _config.yml  build.sh  build_static_files.sh  convert_screencasts.sh  download.md  host.sh  index.md  next.config.ts  package-lock.json  package.json
.github/workflows/: main.yml  pages.yml  update_submodule.yml
backed_game/: index.md
backed_game/src/: CMakeLists.txt
baked_game/: .gitignore  index.md
baked_game/src/: main.cpp
benefits/: bakeable.md  cross_platform.md  modular.md  portable.md  programming_languages.md
demos/baked_log2048/: index.md
demos/dynamic/: .gitignore  index.md
demos/dynamic/src/: CMakeLists.txt  build.sh  main.cpp  vmlib.js
download/: index.md
examples/: index.md  log2048.md
game/: .gitignore  index.md  worker.js
game/src/: CMakeLists.txt  main.cpp  vmlib.js
goals/: headless.md  index.md
guides/: 01_cpp.md  02_sdl.md  index.md
in_depth/: linking.md
posts/: aot.md  platform_android.md  platform_linux.md  platform_web.md  platform_windows.md  platform_xcode.md  timeline.md
roadmap/: index.md
scripts/: build_artifacts.sh  copy_artwork.sh
src/: is_export.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
src/app/docs/[name]/: page.tsx
src/app/guides/[name]/: page.tsx
src/app/posts/[name]/: page.tsx
src/components/: markdown_page.tsx
src/markdown/: convert.ts  index.ts  parse_all.ts  parser.ts  types.ts
topics/: aot.md  example_language_cpp.md  guides.md  platform_android.md  platform_linux.md  platform_web.md  platform_windows.md  platform_xcode.md
topics/guides/: cpp.md  sdl.md
